Enhance booking modal styles for improved user experience

--- a/index.html
+++ b/index.html
@@ -156,11 +156,29 @@
             border: none;
             padding: 12px 30px;
             border-radius: 8px;
-            font-size: 1em;
+            font-size: 1.15em;
             font-weight: 600;
             cursor: pointer;
             margin-top: 10px;
             transition: all 0.3s ease;
+        }
+
+        /* Modal input styles */
+        #booking-modal input[type="text"],
+        #booking-modal input[type="email"] {
+            font-size: 1.15em;
+            padding: 14px 12px;
+            border-radius: 6px;
+            border: 1.5px solid #cbd5e0;
+            margin-bottom: 14px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        #booking-modal label {
+            font-size: 1.08em;
+            font-weight: 500;
+            margin-bottom: 8px;
+            display: block;
         }
         
         .book-button:hover {
