Add initial API setup with proxy handler and update endpoint in HTML for CORS

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 return;
             }
             // GET to Apps Script Web App (CORS workaround)
-            const endpoint = 'https://script.google.com/macros/s/AKfycbwdsTMmq9coKSp73Nllb3O49_X5l1F9PA8ADY5tQiIGYnRWJJ45hXCjmwU70ycuwi0/exec';
+            const endpoint = 'https://office-hours-94al5j2oa-brads-projects-7fbf4f81.vercel.app/api/proxy';
             const params = new URLSearchParams({
                 slotKey: selectedSlotKey,
                 name,
