--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>📅 Office Hours Booking</h1>
-        <p class="subtitle">Book a meeting with Dr. Skopyk <br> History Department - Binghamton University (SUNY) </p>
+        <h1>📅 Office Hours Scheduler</h1>
+        <p class="subtitle">Schedule a meeting with Dr. Skopyk <br> History Department - Binghamton University (SUNY) </p>
         <div class="info-box">
             <p><strong>Meeting Duration:</strong> 20-30 minutes</p>
             <p><strong>How to book:</strong> Click an available time slot below to open the booking form.</p>
