Add contact information for inquiries about availability in booking instructions

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             <p><strong>How to book:</strong> Click an available time slot below to open the booking form.</p>
             <p><strong>Location:</strong> Each slot is either <em>by Zoom</em> or <em>in LT 713</em> as shown below.</p>
             <p><strong>Confirmation:</strong> You will receive an email with meeting details after booking.</p>
+            <p><strong>NB:</strong> Please reach out by <a href="mailto:bskopyk@binghamton.edu">email</a> if you have any questions or would like to check availability outside of posted hours.</p>
         </div>
         
         <div id="loading" class="loading">
