Update meeting duration description for clarity on booking time

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <p class="subtitle">Schedule a meeting with Dr. Skopyk <br> History Department - Binghamton University (SUNY)
         </p>
         <div class="info-box">
-            <p><strong>Meeting Duration:</strong> 20-30 minutes</p>
+            <p><strong>Meeting Duration:</strong> Generally 20 or 30 minutes. If you need more time, reserve two consecutive slots.</p>
             <p><strong>How to book:</strong> Click an available time slot below to open the booking form.</p>
             <p><strong>Location:</strong> Each slot is either <em>by Zoom</em> or <em>in LT 713</em> as shown below.</p>
             <p><strong>Confirmation:</strong> You will receive an email with meeting details after booking.</p>
