Add regular office hours information and Zoom link details to the scheduler

--- a/index.html
+++ b/index.html
@@ -204,11 +204,15 @@
         <h1>📅 Office Hours Scheduler</h1>
         <p class="subtitle">Schedule a meeting with Dr. Skopyk <br> History Department - Binghamton University (SUNY)
         </p>
+        <p>
+            <strong>Regular Office Hours for Fall 2025:</strong> Tuesdays 9:00 AM - 10:30 AM (in LT 713) and Wednesdays 10:00 AM - 11:30 AM (by Zoom). Additional slots available by request.
+        </p>
         <div class="info-box">
             <p><strong>Meeting Duration:</strong> Generally 15 - 30 minutes, depending on the time of the following slots. If you need more time, reserve two consecutive slots.</p>
             <p><strong>How to book:</strong> Click an available time slot below to open the booking form.</p>
             <p><strong>Location:</strong> Each slot is either <em>by Zoom</em> or <em>in LT 713</em> as shown below.</p>
             <p><strong>Confirmation:</strong> You will receive an email with meeting details after booking.</p>
+            <p><strong>Zoom Link:</strong> The Zoom link will be provided in the confirmation email.</p>
             <p><strong>NB:</strong> Please reach out by <a href="mailto:bskopyk@binghamton.edu">email</a> if you have
                 any questions or would like to check availability outside of posted hours.</p>
         </div>
