Update regular office hours information and format in subtitle

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <h1>📅 Office Hours Scheduler</h1>
         <p class="subtitle">Schedule a meeting with Dr. Skopyk <br> History Department - Binghamton University (SUNY)
         </p>
-        <p>
+        <p class="subtitle">
             <strong>Regular Office Hours for Fall 2025:</strong> Tuesdays 9:00 AM - 10:30 AM (in LT 713) and Wednesdays 10:00 AM - 11:30 AM (by Zoom). Additional slots available by request.
         </p>
         <div class="info-box">
@@ -215,7 +215,6 @@
             <p><strong>Zoom Link:</strong> The Zoom link will be provided in the confirmation email.</p>
             <p><strong>NB:</strong> Please reach out by <a href="mailto:bskopyk@binghamton.edu">email</a> if you have
                 any questions or would like to check availability outside of posted hours.</p>
-                <br>
         </div>
 
         <div id="loading" class="loading">
