--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
             <p><strong>Location:</strong> Each slot is either <em>by Zoom</em> or <em>in LT 713</em> as shown below.</p>
             <p><strong>Confirmation:</strong> You will receive an email with meeting details after booking.</p>
             <p><strong>Zoom Link:</strong> If the slot is held via Zoom, the link will be provided in the confirmation email.</p>
-            <p><strong>NB:</strong> Please reach out by <a href="mailto:bskopyk@binghamton.edu">email</a> if you have
-                any questions or would like to check availability outside of posted hours.</p>
+            <p><strong>Availability:</strong> Please <a href="mailto:bskopyk@binghamton.edu">email</a> to check availability outside of posted hours.</p>
         </div>
 
         <div id="loading" class="loading">
