Update help messages

--- a/index.html
+++ b/index.html
@@ -208,11 +208,10 @@
             <strong>Regular Office Hours for Fall 2025:</strong> Tuesdays 9:00 AM - 10:30 AM (in LT 713) and Wednesdays 10:00 AM - 11:30 AM (by Zoom). Additional slots available by request.
         </p>
         <div class="info-box">
-            <p><strong>Meeting Duration:</strong> Generally 15 - 30 minutes, depending on the time of the following slots. If you need more time, reserve two consecutive slots.</p>
+            <p><strong>Meeting Duration:</strong> Generally 15 - 30 minutes. If you need more time, reserve two consecutive slots.</p>
             <p><strong>How to book:</strong> Click an available time slot below to open the booking form.</p>
-            <p><strong>Location:</strong> Each slot is either <em>by Zoom</em> or <em>in LT 713</em> as shown below.</p>
+            <p><strong>Location:</strong> Each slot is either <em>by Zoom</em> or <em>in LT 713</em> as shown below. If relevant, a <strong>Zoom Link</strong> will be provided in the confirmation email.</p>
             <p><strong>Confirmation:</strong> You will receive an email with meeting details after booking.</p>
-            <p><strong>Zoom Link:</strong> If the slot is held via Zoom, the link will be provided in the confirmation email.</p>
             <p><strong>Availability:</strong> Please <a href="mailto:bskopyk@binghamton.edu">email</a> to check availability outside of posted hours.</p>
         </div>
 
