Update office hours information for Spring 2026

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <p class="subtitle">Schedule a meeting with Dr. Skopyk <br> History Department - Binghamton University (SUNY)
         </p>
         <p class="subtitle">
-            <strong>Regular Office Hours for Fall 2025:</strong> Tuesdays 9:00 AM - 10:30 AM (in LT 713) and Wednesdays 10:00 AM - 11:30 AM (by Zoom). Additional slots available by request.
+            <strong>Regular Office Hours for Spring 2026:</strong> Mondays 3:15 PM - 4:45 PM and Tuesdays 9:30 AM - 11:00 AM. Additional slots available by request.
         </p>
         <div class="info-box">
             <p><strong>Meeting Duration:</strong> Generally 15 - 30 minutes. If you need more time, reserve two consecutive slots.</p>
